Fixed button alignment on image source page.

--- a/client/src/pages/photo-source/photo-source.scss
+++ b/client/src/pages/photo-source/photo-source.scss
@@ -17,6 +17,8 @@
   }
 
   .actions {
+    text-align: center;
+    
     button {
       min-width: 155px;
     }
